--- a/lesson3/homework/frontend-loadbalacncer.yaml
+++ b/lesson3/homework/frontend-loadbalacncer.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: frontend-loadbalancer
 
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: frontend
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 30100
+    protocol: TCP
