--- a/lesson3/homework/postgres-deployment.yaml
+++ b/lesson3/homework/postgres-deployment.yaml
@@ -21,9 +21,16 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5432
-        envFrom:
-          - configMapRef:
-              name: postgres-secret
+        env:
+        - name: POSTGRES_USER
+          value: postgres
+        - name: POSTGRES_PASSWORD
+          value: postgres
+        - name: POSTGRES_DB
+          value: postgres
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
+        
         volumeMounts:
           - mountPath: /var/lib/postgresql/data
             name: postgresdata
